DASH-41 DASH-49 DASH-48 Added methods to get dashboard items by entityReference Added support for scheduling release and retraction Added support for determining if entity is hidden Added preliminary impls of release/retraction/availablility methods for announcement and resource Added stubs for release/retraction/availablility checks for assignments
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312905 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -1,5 +1,11 @@
 # MySQL SQL Statements
 
+create.AvailabilityCheck.table = create table dash_availability_check \
+( id bigint not null auto_increment, entity_ref varchar(300) not null, \
+entity_type_id varchar(255) not null, scheduled_time datetime not null, primary key (id)); \
+create unique index dash_availability_check_idx on dash_availability_check(entity_ref, scheduled_time); \
+create index dash_availability_check_time_idx on dash_availability_check(scheduled_time)
+
 create.CalendarItem.table = create table if not exists dash_calendar_item ( id bigint not null auto_increment, \
 calendar_time datetime not null, title varchar(255) not null, access_url varchar(1024) not null, \
 entity_ref varchar(300) not null, entity_type bigint not null, context_id bigint not null, primary key (id) ); \
@@ -35,6 +41,10 @@ create.SourceType.table = create table if not exists dash_sourcetype ( id bigint
 access_permission varchar(255), primary key (id) ); \
 create unique index dash_source_idx on dash_sourcetype (identifier)
 
+delete.AvailabilityChecks.before.date = delete from dash_availability_check where scheduled_time < ?
+
+delete.AvailabilityChecks.by.entityReference = delete from dash_availability_check where entity_ref = ?
+
 delete.CalendarItem.by.id = delete from dash_calendar_item where id=?
 
 delete.CalendarLinks.by.itemId = delete from dash_calendar_link where item_id=?
@@ -51,6 +61,9 @@ exists.CalendarItem.by.id = select * from dash_calendar_item where id=?
 
 exists.CalendarItem.by.entityReference = select * from dash_calendar_item where entity_ref=?
 
+insert.AvailabilityCheck = insert into dash_availability_check (entity_ref, entity_type_id, scheduled_time) \
+values (?, ?, ?)
+
 insert.CalendarItem = insert into dash_calendar_item (calendar_time, title , access_url, entity_ref, entity_type, context_id) values (?, ?, ?, ?, ?, ?)
 
 insert.CalendarLink = insert into dash_calendar_link (person_id, item_id, context_id, hidden, sticky) values \
@@ -66,6 +79,10 @@ insert.NewsLink = insert into dash_news_link (person_id, item_id, context_id, hi
 insert.Person = insert into dash_person (user_id,sakai_id) values (?, ?)
 
 insert.SourceType = insert into dash_sourcetype (identifier, access_permission) values (?, ?)
+
+select.AvailabilityChecks.before.date = select * from dash_availability_check where scheduled_time < ?
+
+select.AvailabilityChecks.by.entityReference = select * from dash_availability_check where entity_ref = ?
 
 select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, ci.access_url as ci_access_url, \
 ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
