--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -1,5 +1,12 @@
 # Oracle SQL Statements
 
+create.AvailabilityCheck.table = create table dash_availability_check \
+( id number not null primary key, entity_ref varchar2(300) not null, \
+entity_type_id varchar2(255) not null, scheduled_time timestamp(0) not null); \
+create sequence dash_availability_check_seq start with 1 increment by 1 nomaxvalue; \
+create unique index dash_availability_check_idx on dash_availability_check(entity_ref, scheduled_time); \
+create index dash_availability_check_time_idx on dash_availability_check(scheduled_time)
+
 create.CalendarItem.table = create table dash_calendar_item \
 ( id number not null primary key, calendar_time timestamp(0) not null, \
 title varchar2(255) not null, access_url varchar2(1024) not null, \
@@ -46,6 +53,10 @@ create.SourceType.table = create table dash_sourcetype \
 create sequence dash_sourcetype_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_source_idx on dash_sourcetype (identifier)
 
+delete.AvailabilityChecks.before.date = delete from dash_availability_check where scheduled_time < ?
+
+delete.AvailabilityChecks.by.entityReference = delete from dash_availability_check where entity_ref = ?
+
 delete.CalendarItem.by.id = delete from dash_calendar_item where id=?
 
 delete.CalendarLinks.by.itemId = delete from dash_calendar_link where item_id=?
@@ -61,6 +72,9 @@ s
 exists.CalendarItem.by.id = select * from dash_calendar_item where id=?
 
 exists.CalendarItem.by.entityReference = select * from dash_calendar_item where entity_ref=?
+
+insert.AvailabilityCheck = insert into dash_availability_check (id, entity_ref, entity_type_id, scheduled_time) \
+values (dash_availability_check_seq.nextval, ?, ?, ?)
 
 insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, entity_type, context_id) \
 values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?)
@@ -79,6 +93,10 @@ values (dash_news_link_seq.nextval, ?, ?, ?, ?, ?)
 insert.Person = insert into dash_person (id,user_id,sakai_id) values (dash_person_seq.nextval, ?, ?)
 
 insert.SourceType = insert into dash_sourcetype ( id, identifier, access_permission) values (dash_sourcetype_seq.nextval, ?, ?)
+
+select.AvailabilityChecks.before.date = select * from dash_availability_check where scheduled_time < ?
+
+select.AvailabilityChecks.by.entityReference = select * from dash_availability_check where entity_ref = ?
 
 select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
 ci.title as ci_title, ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, \
