add support for Schedule event
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312916 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -43,6 +43,11 @@
 		    <artifactId>sakai-announcement-api</artifactId>
 	        <version>2.9-SNAPSHOT</version>
 	    </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.calendar</groupId>
+            <artifactId>sakai-calendar-api</artifactId>
+	        <version>2.9-SNAPSHOT</version>
+        </dependency>
 	    <dependency>
 		<groupId>org.sakaiproject.message</groupId>
 		<artifactId>sakai-message-api</artifactId>
