DASH-2 DASH-52 Added methods to logic layer to update links to calendar items and news items. Added methods to dao to support these updates.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312919 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -48,11 +48,15 @@ delete.AvailabilityChecks.by.entityReference = delete from dash_availability_che
 
 delete.CalendarItem.by.id = delete from dash_calendar_item where id=?
 
+delete.CalendarLink.by.personId.itemId = delete from dash_calendar_link where person_id=? and item_id=?
+
 delete.CalendarLinks.by.itemId = delete from dash_calendar_link where item_id=?
 
 delete.CalendarLinks.by.person.context = delete from dash_calendar_link where person_id=? and context_id=?
 
 delete.NewsItem.by.id = delete from dash_news_item where id=?
+
+delete.NewsLinks.by.personId.itemId = delete from dash_news_link where person_id=? and item_id=?
 
 delete.NewsLinks.by.itemId = delete from dash_news_link where item_id=?
 
@@ -166,6 +170,14 @@ select.Person.by.id = select id, sakai_id, user_id from dash_person where id=?
 select.Person.by.userId = select id, sakai_id, user_id from dash_person where user_id=?
 
 select.Person.by.sakaiId = select id, sakai_id, user_id from dash_person where sakai_id=?
+
+select.sakaiUserIds.in.calendarLinks.by.entityReference = select person.sakai_id from dash_person person \
+join dash_calendar_link link on link.person_id=person.id join dash_calendar_item item on link.item_id=item.id \
+where item.entity_ref=?  
+
+select.sakaiUserIds.in.newsLinks.by.entityReference = select person.sakai_id from dash_person person \
+join dash_news_link link on link.person_id=person.id join dash_news_item item on link.item_id=item.id \
+where item.entity_ref=?  
 
 select.SourceType.by.id = select st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission \
 from dash_sourcetype st where id=?
