DASH-52 Deal with updates to access/availability. Specifically, get a list of old users and new users, and from those, calculate the users to be added and removed.  The remove those needing to be removed and add those needing to be added, without touching the records for users who are to remain. Also, provide event-processor support for these events related to resources.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312920 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -55,7 +55,7 @@ delete.CalendarLinks.by.person.context = delete from dash_calendar_link where pe
 
 delete.NewsItem.by.id = delete from dash_news_item where id=?
 
-delete.NewsLinks.by.personId.itemId = delete from dash_news_link where person_id=? and item_id=?
+delete.NewsLink.by.personId.itemId = delete from dash_news_link where person_id=? and item_id=?
 
 delete.NewsLinks.by.itemId = delete from dash_news_link where item_id=?
 
