--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -90,6 +90,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>r09</version>
+		</dependency>
   	</dependencies>
   	
 	<build>
