the calendar entitytype and event listener
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312924 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -19,5 +19,8 @@ resource.user.name = Posted by: {0}
 resource.news.time = Date posted: {0}
 resource.info.link = Download this resource.
 
+schedule.info.link = More info.
+schedule.news.time = Date posted: {0}
+
 
 
