DASH-55 Added support for custom labels in the list view for CalendarItems.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312926 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -14,6 +14,7 @@ assignment.info.link = More info.
 assignment.grade.type = Grade: {0} 
 assignment.max.grade = max ({0})
 assignment.submission.status = Status: {0}
+assignment.due.date = Due date: 
 
 resource.user.name = Posted by: {0}
 resource.news.time = Date posted: {0}
