--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -8,7 +8,7 @@ create unique index dash_availability_check_idx on dash_availability_check(entit
 create index dash_availability_check_time_idx on dash_availability_check(scheduled_time)
 
 create.CalendarItem.table = create table dash_calendar_item \
-( id number not null primary key, calendar_time timestamp(0) not null, \
+( id number not null primary key, calendar_time timestamp(0) not null, calendar_time_label_key varchar2(127), \
 title varchar2(255) not null, access_url varchar2(1024) not null, \
 entity_ref varchar2(300) not null, entity_type number not null, context_id number not null ); \
 create sequence dash_calendar_item_seq start with 1 increment by 1 nomaxvalue; \
@@ -80,8 +80,8 @@ exists.CalendarItem.by.entityReference = select * from dash_calendar_item where 
 insert.AvailabilityCheck = insert into dash_availability_check (id, entity_ref, entity_type_id, scheduled_time) \
 values (dash_availability_check_seq.nextval, ?, ?, ?)
 
-insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, title , access_url, entity_ref, entity_type, context_id) \
-values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?)
+insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, calendar_time_label_key, title , access_url, entity_ref, entity_type, context_id) \
+values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?)
 
 insert.CalendarLink = insert into dash_calendar_link (id, person_id, item_id, context_id, hidden, sticky) \
 values (dash_calendar_link_seq.nextval, ?, ?, ?, ?, ?)
@@ -102,28 +102,28 @@ select.AvailabilityChecks.before.date = select * from dash_availability_check wh
 
 select.AvailabilityChecks.by.entityReference = select * from dash_availability_check where entity_ref = ?
 
-select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
+select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, \
 ci.title as ci_title, ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, \
 st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
 join dash_sourcetype st on st.id=ci.entity_type where ci.entity_ref=?
 
-select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
+select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, \
 ci.title as ci_title, ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, 
 st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
 join dash_sourcetype st on st.id=ci.entity_type where ci.id=?
 
-select.CalendarItems.by.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
+select.CalendarItems.by.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
 ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
 where site.context_id=? 
 
-select.CalendarItems.by.sakaiId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
+select.CalendarItems.by.sakaiId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
 ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
@@ -131,7 +131,7 @@ from dash_person usr join dash_calendar_link link on usr.id=link.person_id join 
 join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
 where usr.sakai_id=? order by ci.calendar_time asc
 
-select.CalendarItems.by.sakaiId.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.title as ci_title, \
+select.CalendarItems.by.sakaiId.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
 ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
