DASH-54 Enable use of more than one entry in Calendar section of dashboard for an entity (e.g. due date *AND* close date for an assignment).
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312930 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -1,16 +1,20 @@
 # MySQL SQL Statements
 
 create.AvailabilityCheck.table = create table dash_availability_check \
-( id bigint not null auto_increment, entity_ref varchar(300) not null, \
+( id bigint not null auto_increment, entity_ref varchar(265) not null, \
 entity_type_id varchar(255) not null, scheduled_time datetime not null, primary key (id)); \
 create unique index dash_availability_check_idx on dash_availability_check(entity_ref, scheduled_time); \
 create index dash_availability_check_time_idx on dash_availability_check(scheduled_time)
 
 create.CalendarItem.table = create table if not exists dash_calendar_item ( id bigint not null auto_increment, \
-calendar_time datetime not null, calendar_time_label_key varchar(127), title varchar(255) not null, access_url varchar(1024) not null, \
-entity_ref varchar(300) not null, entity_type bigint not null, context_id bigint not null, primary key (id) ); \
+calendar_time datetime not null, calendar_time_label_key varchar(40), title varchar(255) not null, access_url varchar(1024) not null, \
+entity_ref varchar(265) not null, entity_type bigint not null, context_id bigint not null, primary key (id) ); \
+create unique index dash_calendar_entity_label_idx on dash_calendar_item (entity_ref, calendar_time_label_key); \
+create index dash_calendar_entity_idx on dash_calendar_item (entity_ref)
+
 create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
-create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref)
+create unique index dash_calendar_entity_label_idx on dash_calendar_item (entity_ref, calendar_time_label_key); \
+create index dash_calendar_entity_idx on dash_calendar_item (entity_ref)
 
 create.CalendarLink.table = create table if not exists dash_calendar_link ( id bigint not null auto_increment, \
 person_id bigint not null, context_id bigint not null, item_id bigint not null, hidden bit default 0, \
@@ -22,7 +26,7 @@ context_url varchar(1024) not null, context_title varchar(255) not null, primary
 create unique index dash_context_idx on dash_context (context_id)
 
 create.NewsItem.table = create table if not exists dash_news_item ( id bigint not null auto_increment, news_time datetime not null, \
-title varchar(255) not null, access_url varchar(1024) not null, entity_ref varchar(300) not null, entity_type bigint not null, \
+title varchar(255) not null, access_url varchar(1024) not null, entity_ref varchar(265) not null, entity_type bigint not null, \
 context_id bigint not null, primary key (id) ); \
 create index dash_news_time_idx on dash_news_item (news_time); \
 create unique index dash_news_entity_idx on dash_news_item (entity_ref)
@@ -88,11 +92,11 @@ select.AvailabilityChecks.before.date = select * from dash_availability_check wh
 
 select.AvailabilityChecks.by.entityReference = select * from dash_availability_check where entity_ref = ?
 
-select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.access_url as ci_access_url, \
+select.CalendarItem.by.entityReference.calendarTimeLabelKey = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.access_url as ci_access_url, \
 ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
-join dash_sourcetype st on st.id=ci.entity_type where ci.entity_ref=?
+join dash_sourcetype st on st.id=ci.entity_type where ci.entity_ref=? and ci.calendar_time_label_key=?
 
 select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.access_url as ci_access_url, \
 ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
@@ -106,6 +110,12 @@ st.access_permission as type_accessPermission, site.id as site_id, site.context_
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
 where site.context_id=? 
+
+select.CalendarItems.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.access_url as ci_access_url, \
+ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
+join dash_sourcetype st on st.id=ci.entity_type where ci.entity_ref=?
 
 select.CalendarItems.by.sakaiId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
 ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
