--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -1,19 +1,20 @@
 # Oracle SQL Statements
 
 create.AvailabilityCheck.table = create table dash_availability_check \
-( id number not null primary key, entity_ref varchar2(300) not null, \
+( id number not null primary key, entity_ref varchar2(265) not null, \
 entity_type_id varchar2(255) not null, scheduled_time timestamp(0) not null); \
 create sequence dash_availability_check_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_availability_check_idx on dash_availability_check(entity_ref, scheduled_time); \
 create index dash_availability_check_time_idx on dash_availability_check(scheduled_time)
 
 create.CalendarItem.table = create table dash_calendar_item \
-( id number not null primary key, calendar_time timestamp(0) not null, calendar_time_label_key varchar2(127), \
+( id number not null primary key, calendar_time timestamp(0) not null, calendar_time_label_key varchar2(40), \
 title varchar2(255) not null, access_url varchar2(1024) not null, \
-entity_ref varchar2(300) not null, entity_type number not null, context_id number not null ); \
+entity_ref varchar2(265) not null, entity_type number not null, context_id number not null ); \
 create sequence dash_calendar_item_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
-create unique index dash_calendar_entity_idx on dash_calendar_item (entity_ref)
+create unique index dash_calendar_entity_label_idx on dash_calendar_item (entity_ref, calendar_time_label_key); \
+create index dash_calendar_entity_idx on dash_calendar_item (entity_ref)
 
 create.CalendarLink.table = create table dash_calendar_link \
 ( id number not null primary key, person_id number not null, context_id number not null, \
@@ -30,7 +31,7 @@ create unique index dash_context_idx on dash_context (context_id)
 
 create.NewsItem.table = create table dash_news_item ( id number not null primary key, \
 news_time timestamp(0) not null, title varchar2(255) not null, \
-access_url varchar2(1024) not null, entity_ref varchar2(300) not null, \
+access_url varchar2(1024) not null, entity_ref varchar2(265) not null, \
 entity_type number not null, context_id number not null ); \
 create sequence dash_news_item_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_news_time_idx on dash_news_item (news_time); \
@@ -102,12 +103,11 @@ select.AvailabilityChecks.before.date = select * from dash_availability_check wh
 
 select.AvailabilityChecks.by.entityReference = select * from dash_availability_check where entity_ref = ?
 
-select.CalendarItem.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, \
-ci.title as ci_title, ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, \
-st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+select.CalendarItem.by.entityReference.calendarTimeLabelKey = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.access_url as ci_access_url, \
+ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
-join dash_sourcetype st on st.id=ci.entity_type where ci.entity_ref=?
+join dash_sourcetype st on st.id=ci.entity_type where ci.entity_ref=? and ci.calendar_time_label_key=?
 
 select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, \
 ci.title as ci_title, ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, 
@@ -122,6 +122,13 @@ st.access_permission as type_accessPermission, site.id as site_id, site.context_
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
 where site.context_id=? 
+
+select.CalendarItems.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, \
+ci.title as ci_title, ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, \
+st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
+join dash_sourcetype st on st.id=ci.entity_type where ci.entity_ref=?
 
 select.CalendarItems.by.sakaiId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
 ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
