DASH-54 Added simple example of calendar item with two dates (assignment with due date and close date). Use java.util methods instead of Google collections methods.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312931 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -14,7 +14,8 @@ assignment.info.link = More info.
 assignment.grade.type = Grade: {0} 
 assignment.max.grade = max ({0})
 assignment.submission.status = Status: {0}
-assignment.due.date = Due date: 
+assignment.due.date = Due date:
+assignment.close.date = Accept until: 
 
 resource.user.name = Posted by: {0}
 resource.news.time = Date posted: {0}
