DASH-54 Use ascii encoding for entity_ref and calendar_time_label_key columns in dash_calendar_item table.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312936 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -1,14 +1,14 @@
 # MySQL SQL Statements
 
 create.AvailabilityCheck.table = create table dash_availability_check \
-( id bigint not null auto_increment, entity_ref varchar(265) not null, \
+( id bigint not null auto_increment, entity_ref varchar(265) character set ascii not null, \
 entity_type_id varchar(255) not null, scheduled_time datetime not null, primary key (id)); \
 create unique index dash_availability_check_idx on dash_availability_check(entity_ref, scheduled_time); \
 create index dash_availability_check_time_idx on dash_availability_check(scheduled_time)
 
 create.CalendarItem.table = create table if not exists dash_calendar_item ( id bigint not null auto_increment, \
-calendar_time datetime not null, calendar_time_label_key varchar(40), title varchar(255) not null, access_url varchar(1024) not null, \
-entity_ref varchar(265) not null, entity_type bigint not null, context_id bigint not null, primary key (id) ); \
+calendar_time datetime not null, calendar_time_label_key varchar(40) character set ascii, title varchar(255) not null, access_url varchar(1024) not null, \
+entity_ref varchar(265) character set ascii not null, entity_type bigint not null, context_id bigint not null, primary key (id) ); \
 create unique index dash_calendar_entity_label_idx on dash_calendar_item (entity_ref, calendar_time_label_key); \
 create index dash_calendar_entity_idx on dash_calendar_item (entity_ref)
 
@@ -26,7 +26,7 @@ context_url varchar(1024) not null, context_title varchar(255) not null, primary
 create unique index dash_context_idx on dash_context (context_id)
 
 create.NewsItem.table = create table if not exists dash_news_item ( id bigint not null auto_increment, news_time datetime not null, \
-title varchar(255) not null, access_url varchar(1024) not null, entity_ref varchar(265) not null, entity_type bigint not null, \
+title varchar(255) not null, access_url varchar(1024) not null, entity_ref varchar(265) character set ascii not null, entity_type bigint not null, \
 context_id bigint not null, primary key (id) ); \
 create index dash_news_time_idx on dash_news_item (news_time); \
 create unique index dash_news_entity_idx on dash_news_item (entity_ref)
