DASH-69 DASH-16 DASH-19 Added RowMapper impls for NewsLink and CalendarLink objects. Updated SQL queries and PersonMapper to support link mappers. Correct typos in SQL queries and in DashboardDaoImpl. Added logic and dao methods to update links when items are hidden or made sticky.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312943 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -106,7 +106,7 @@ select.CalendarItems.by.contextId = select ci.id as ci_id, ci.calendar_time as c
 ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_calendar_item ci join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
+from dash_calendar_item ci join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type \
 where site.context_id=? 
 
 select.CalendarItems.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.access_url as ci_access_url, \
@@ -120,7 +120,7 @@ ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_person usr join dash_calendar_link link on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
-join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
+join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type \
 where usr.sakai_id=? order by ci.calendar_time asc
 
 select.CalendarItems.by.sakaiId.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
@@ -128,8 +128,18 @@ ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_person usr join dash_calendar_link link on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
-join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ci.entity_type \
+join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type \
 where usr.sakai_id=? and site.context_id=? order by ci.calendar_time asc
+
+select.CalendarLink.by.calendarItemId.personId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
+ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_calendar_link link join dash_person usr on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type \
+where link.item_id=? and link.person_id=?
 
 select.Context.by.id = select site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.id=?
@@ -153,7 +163,7 @@ select.NewsItems.by.contextId = select ni.id as ni_id, ni.news_time as ni_news_t
 ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_news_item ni join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
+from dash_news_item ni join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where site.context_id=? 
 
 select.NewsItems.by.sakaiId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
@@ -161,7 +171,7 @@ ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_person usr join dash_news_link link on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
-join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where usr.sakai_id=? order by ni.news_time desc
 
 select.NewsItems.by.sakaiId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
@@ -169,14 +179,24 @@ ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_person usr join dash_news_link link on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
-join dash_context site on site.id=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where usr.sakai_id=? and site.context_id=? order by ni.news_time desc
 
-select.Person.by.id = select id, sakai_id, user_id from dash_person where id=?
+select.NewsLink.by.newsItemId.personId = select ci.id as ci_id, ci.news_time as ci_news_time, ci.news_time_label_key as ci_news_time_label_key, ci.title as ci_title, \
+ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ci on ci.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ci.entity_type \
+where link.item_id=? and link.person_id=?
 
-select.Person.by.userId = select id, sakai_id, user_id from dash_person where user_id=?
+select.Person.by.id = select id as p_id, sakai_id as p_sakai_id, user_id as p_user_id from dash_person where id=?
 
-select.Person.by.sakaiId = select id, sakai_id, user_id from dash_person where sakai_id=?
+select.Person.by.userId = select id as p_id, sakai_id as p_sakai_id, user_id as p_user_id from dash_person where user_id=?
+
+select.Person.by.sakaiId = select id as p_id, sakai_id as p_sakai_id, user_id as p_user_id from dash_person where sakai_id=?
 
 select.sakaiUserIds.in.calendarLinks.by.entityReference = select person.sakai_id from dash_person person \
 join dash_calendar_link link on link.person_id=person.id join dash_calendar_item item on link.item_id=item.id \
@@ -198,6 +218,9 @@ update.CalendarItem.title = update dash_calendar_item set title=? where id=?
 
 update.CalendarItem.title.calendarTime = update dash_calendar_item set title=?, calendar_time=? where id=?
 
+update.CalendarLink = update dash_calendar_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=?  where id=?
+
 update.NewsItem.title = update dash_news_item set title=? where id=?
 
+update.NewsLink = update dash_news_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=?  where id=?
 
